Dockerfile rewrite
219mb